--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ pyntcloud~=0.1.2
 numpy~=1.18.1
 pandas~=1.0.3
 tqdm~=4.44.1
-tensorflow~=1.15.0
+#tensorflow~=1.15.0
 tensorflow-compression==1.3
 pyyaml~=5.1.2
 pytest~=5.4.2
