Finalize .gitignore and clean up tracked files
Former-commit-id: fbba7132170eb80a476c9c1af7fe935c16406a97

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,18 @@
-# Ignore virtual environments
-/env/
-
-# Ignore other potentially large or unnecessary files
-*.pyc
+# Python-specific
 __pycache__/
-*.log
+*.pyc
+*.pyo
 
-# Ignore shell scripts
-*.sh
+# Environment folders
+env/
+.venv/
 
-# Ignore macOS system files
+# Jupyter notebooks
+.ipynb_checkpoints/
+
+# System-specific
 .DS_Store
+Thumbs.db
 
-# Ignore utility folders
-myutils/
-MyUtils/
+# Log files
+*.log
